	'which' is not specified.
	___ may change before release ___

    o	graphics::xy.coords, xyz.coords and n2mfrow have been moved to
	the grDevices name space (to be available in grid as well).

    o	The SVN revision number will appear after the date in the
	welcome message, provided it is available.  The date is now
	the date of the last change to the sources.


NEW FEATURES

    o	The specification of the substitutions done when processing
	Renviron files is more liberal: see ?Startup.  It now
	accepts forms like R_LIBS=${HOME}/Rlibrary:${WORKGRP}/R/lib .

    o	R.home() has been expanded to return the paths to components
	(which can as from this version be installed elsewhere).

    o	nlminb(), similar to that in S-PLUS, added to package 'stats'.

    o	Added tclServiceMode() function to the tcltk package to allow
	updating to be suspended.

    o	barplot() now has arguments 'log = ""' and 'add = FALSE'
	(as in barplot2() from package 'gplots').

    o	smooth.spline() has a new argument 'keep.data' which allows to
	provide residuals() and fitted() methods for smoothing splines.

    o	plot.lm() has two new plots (for 'which' = 5 or 6), plotting
	residuals or cook distances versus (transformed) leverages.
	The default for 'sub.caption' has been improved for long calls.

    o	[g]sub() now have a 'useBytes' argument like grep() and regexpr().

    o	density() is now an S3 generic where density.default() {former
	density()} has new argument 'weights' for specifying observation
	masses different than the default 1/N -- based on a suggestion and
	code from Adrian Baddeley.

    o	The default mosaicplot() method by default draws grey boxes.

    o	labels() now has a method for "dist" objects (replacing that
	for names() which was withdrawn in 2.1.0).

    o	checkDocFiles() in package 'tools' now checks for bad \usage
	lines (syntactically invalid R code).

    o	dump() now skips missing objects with a warning rather than
	throw an error.
