@@ -310,7 +310,7 @@ Rboolean isUserBinop(SEXP s)
 
 Rboolean isNull(SEXP s)
 {
-    return (s == R_NilValue || (TYPEOF(s) == EXPRSXP && LENGTH(s) == 0));
+    return (s == R_NilValue);
 }
 
 Rboolean isFunction(SEXP s)
